get migration history
